tests/option_compile_failed/try_in_block_when_expression_should_fail_to_compile.rs
use macrofied_toolbox::option;

fn main() {
    inner().unwrap();

    fn inner() -> Option<usize> {
        option! {
            @when { foo()? }
            @some "will not compile";
        }
    }
}

fn foo() -> Option<usize> {
    Some(42)
}